--- a/src/App.css
+++ b/src/App.css
@@ -7,19 +7,10 @@
 html,body{
   width: 100%;
   height: 100%;
+  font-family: 'Courier New', Courier, monospace;
 }
 
-.container{
-  width: 100%;
-  padding-left: 60px;
-  padding-right: 60px;
-}
 
-@media screen and (min-width: 640px){
-  .container{
-    width: 100%;
-  }
-}
 
 
 
